updating my profile

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi I am a Software Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am orginaly from Leeds in the UK but I now live in Sydney, Australia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy watching Rugby League and Soccer, getting out and about walking with my dog and keeping up with friends</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be to work in the field of cyber security</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in the Inner West of Sydney with my partner Zoe and my dog Bear</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer as I want to be ahead of the curve in the ever changing landscape of the world due to the increased use of the World Wide Web</p>
     </section>
 
     <footer id="footer">
